# koopman-checksum

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: benchmarks.rs  optimization_comparison.rs
reference/: reference.c
src/: basic.rs  lib.rs  main.rs
tests/: hd_exhaustive.rs  reference_comparison.rs
