[package]
name = "koopman-checksum"
version = "1.0.4"
edition = "2021"
authors = ["Stuart Stock <stuart@int08h.com>"]
description = "Koopman checksum algorithm implementation. The Koopman checksum provides 1- and 2-bit fault detection for significantly longer data words than traditional dual-sum checksums like Adler or Fletcher."
license = "MIT OR Apache-2.0"
repository = "https://github.com/int08h/koopman-checksum"
documentation = "https://docs.rs/koopman-checksum"
readme = "README.md"
keywords = ["checksum", "koopman", "error-detection"]
categories = ["algorithms", "no-std"]
rust-version = "1.83.0"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.8"
rayon = "1.11"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
